--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,3 +1,4 @@
 en:
   site_settings:
     discourse_social_bbcode_enabled: 'Enable the Discourse Social BBCode plugin'
+    discourse_social_bbcode_auto_scan: 'Automatically scan pages to activate social buttons. Set this to false if you intend to activate the social buttons manually using window.discourseSocialBBCodeScan().'
